# narya

./: Cargo.toml
.gemini/: MEMORIES.md
api/: Cargo.toml
api/src/: ipc.rs  lib.rs  tracker.rs
config/: Cargo.toml
config/src/: diff.rs  lib.rs  matcher.rs  model.rs  parser.rs  persistent.rs  transformer.rs
daemon/: Cargo.toml
daemon/src/: config_manager.rs  controller.rs  ipc.rs  lib.rs  tracker.rs
design/: narya-architecture-design.md  phase2-process-tracker-design.md  phase3-gui-design.md
docs/: PROGRESS.md
docs/superpowers/plans/: 2024-05-23-implement-singbox-ffi-bindings.md  2026-04-22-gui-shell-implementation.md  2026-04-22-singbox-ffi-bridge.md  2026-04-23-drag-and-drop-rules.md  2026-04-23-ebpf-rule-sync.md  2026-04-23-ipc-integration-and-real-apps.md  2026-04-23-node-selection-and-speedtest.md  2026-04-23-nodes-list-and-profile.md  2026-04-23-realtime-traffic-graph.md  2026-04-23-search-and-polishing.md  2026-04-23-ui-ux-polishing.md
narya-core/: Cargo.toml  build.rs
narya-core/singbox-bridge/: go.mod  go.sum  libsingbox.h  main.go
narya-core/src/: lib.rs  singbox.rs
narya-ebpf/: Cargo.toml  rust-toolchain.toml
narya-ebpf-common/: Cargo.toml
narya-ebpf-common/src/: lib.rs
narya-ebpf/src/: main.rs
narya-ui/: Cargo.toml
narya-ui/src/: ipc_client.rs  lib.rs
narya-ui/src/components/: mod.rs  proxy_list.rs  rule_panel.rs  traffic_chart.rs
narya-ui/src/models/: connection.rs  log.rs  mod.rs  profile.rs  rule.rs  traffic.rs
platform/: Cargo.toml
platform/src/: lib.rs
scripts/: install-deps-linux.sh
src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
