[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
