[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
narya-core = { path = "../narya-core" }
platform = { path = "../platform" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
