[package]
name = "narya-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["x11", "wayland", "font-kit"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["x11", "wayland"] }
gpui_linux = { git = "https://github.com/zed-industries/zed", features = ["x11", "wayland"] }
api = { path = "../api" }
config = { path = "../config" }
utils = { path = "../utils" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
tokio = { workspace = true }
parking_lot = "0.12"
futures = "0.3"
